# resume_builder

./: .gitignore
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: pyproject.toml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
scripts/backend/: entrypoint.sh
scripts/frontend/: entrypoint.sh
